--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,11 +11,11 @@
     <head>
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
-        <!--<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">-->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="http://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/vue.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.versioned("../../public/javascripts/main.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
     <body>
         @* And here's where we render the `Html` object containing
